// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed state for re-authentication dialog 1`] = `
.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-top: 8px;
  background: #FF6257;
  color: #000000;
  width: 100%;
}

.c8 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c9 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 16px;
  width: 60%;
}

.c17 {
  box-sizing: border-box;
  width: 40%;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
  margin-top: 16px;
}

.c18:focus-visible,
.teleport-button__force-focus-visible .c18 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c18:hover,
.teleport-button__force-hover .c18 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c18:active,
.teleport-button__force-active .c18 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c18:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  color: rgba(255, 255, 255, 0.72);
  text-align: center;
}

.c5 {
  display: flex;
  align-items: center;
}

.c10 {
  display: flex;
}

.c13 {
  display: flex;
  align-items: flex-end;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 416px;
}

.c11 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

.c16 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c16 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c16 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c16 .react-select__control:hover,
.c16 .react-select__control:focus,
.c16 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control:hover .react-select__dropdown-indicator,
.c16 .react-select__control:focus .react-select__dropdown-indicator,
.c16 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__control .react-select__indicator:hover,
.c16 .react-select__control .react-select__dropdown-indicator:hover,
.c16 .react-select__control .react-select__indicator:focus,
.c16 .react-select__control .react-select__dropdown-indicator:focus,
.c16 .react-select__control .react-select__indicator:active,
.c16 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c16 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c16 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c16 .react-select__single-value {
  color: #FFFFFF;
}

.c16 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c16 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c16 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c16 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c16 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c16 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c16 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c16 .react-select__clear-indicator:hover,
.c16 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c16 .react-select__clear-indicator:hover svg,
.c16 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c16 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c16 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c16 .react-select__indicator-separator {
  display: none;
}

.c16 .react-select__loading-indicator {
  display: none;
}

.c16 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c16 .react-select__control--is-disabled .react-select__single-value,
.c16 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c16 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c16 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <form>
        <div
          class="c4 c5"
          style="flex-direction: column;"
        >
          <h2
            class="c6"
          >
            Verify your identity
          </h2>
          <div
            class="c7"
            color="text.slightlyMuted"
          >
            You must verify your identity with one of your existing two-factor devices before 
            performing this action
            .
          </div>
        </div>
        <div
          class="c8"
          kind="danger"
          width="100%"
        >
          an error has occurred
        </div>
        <div
          class="c9 c10 c11"
        >
          <div
            class="c12 c13"
          >
            <div
              class="c14"
              data-testid="mfa-select"
              width="60%"
            >
              <label
                class="c15"
                for="select"
              >
                Two-factor Type
              </label>
              <div
                class="c16"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        Passkey or Security Key
                      </div>
                      <input
                        aria-autocomplete="list"
                        class="css-62g3xt-dummyInput"
                        id="select"
                        readonly=""
                        tabindex="0"
                        value=""
                      />
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c17"
              width="40%"
            />
          </div>
        </div>
        <div
          class="c9"
        >
          <button
            class="c18"
            fill="filled"
            type="submit"
          >
            Continue
          </button>
          <button
            class="c19"
            fill="filled"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`render re-authentication dialog 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c8 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 0;
  margin-right: 16px;
  width: 60%;
}

.c16 {
  box-sizing: border-box;
  width: 40%;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
  margin-top: 16px;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c18:focus-visible,
.teleport-button__force-focus-visible .c18 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c18:hover,
.teleport-button__force-hover .c18 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c18:active,
.teleport-button__force-active .c18 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c18:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: 0.015px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  color: rgba(255, 255, 255, 0.72);
  text-align: center;
}

.c5 {
  display: flex;
  align-items: center;
}

.c9 {
  display: flex;
}

.c12 {
  display: flex;
  align-items: flex-end;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 416px;
}

.c10 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

.c15 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c15 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c15 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c15 .react-select__control:hover,
.c15 .react-select__control:focus,
.c15 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c15 .react-select__control:hover .react-select__dropdown-indicator,
.c15 .react-select__control:focus .react-select__dropdown-indicator,
.c15 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c15 .react-select__control .react-select__indicator:hover,
.c15 .react-select__control .react-select__dropdown-indicator:hover,
.c15 .react-select__control .react-select__indicator:focus,
.c15 .react-select__control .react-select__dropdown-indicator:focus,
.c15 .react-select__control .react-select__indicator:active,
.c15 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c15 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c15 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c15 .react-select__single-value {
  color: #FFFFFF;
}

.c15 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c15 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c15 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c15 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c15 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c15 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c15 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c15 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c15 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c15 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c15 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c15 .react-select__clear-indicator:hover,
.c15 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c15 .react-select__clear-indicator:hover svg,
.c15 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c15 .react-select__menu {
  margin-top: 0px;
  background-color: #4A5688;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c15 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c15 .react-select__indicator-separator {
  display: none;
}

.c15 .react-select__loading-indicator {
  display: none;
}

.c15 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c15 .react-select__control--is-disabled .react-select__single-value,
.c15 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c15 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c15 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <form>
        <div
          class="c4 c5"
          style="flex-direction: column;"
        >
          <h2
            class="c6"
          >
            Verify your identity
          </h2>
          <div
            class="c7"
            color="text.slightlyMuted"
          >
            You must verify your identity with one of your existing two-factor devices before 
            performing this action
            .
          </div>
        </div>
        <div
          class="c8 c9 c10"
        >
          <div
            class="c11 c12"
          >
            <div
              class="c13"
              data-testid="mfa-select"
              width="60%"
            >
              <label
                class="c14"
                for="select"
              >
                Two-factor Type
              </label>
              <div
                class="c15"
              >
                <div
                  class="react-select-container css-2b097c-container"
                >
                  <div
                    class="react-select__control css-yk16xz-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1uccc91-singleValue"
                      >
                        Passkey or Security Key
                      </div>
                      <input
                        aria-autocomplete="list"
                        class="css-62g3xt-dummyInput"
                        id="select"
                        readonly=""
                        tabindex="0"
                        value=""
                      />
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c16"
              width="40%"
            />
          </div>
        </div>
        <div
          class="c8"
        >
          <button
            class="c17"
            fill="filled"
            type="submit"
          >
            Continue
          </button>
          <button
            class="c18"
            fill="filled"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
